--- a/src/scss/components/_drop-down.scss
+++ b/src/scss/components/_drop-down.scss
@@ -61,7 +61,7 @@
 
 .scrolled-destination{
     @extend .scrolled-about;
-    left: 5rem;
+    left: -3rem;
     transform: translate(8rem, -3.9rem);
     width: 100%;
 }
